--- a/index.html
+++ b/index.html
@@ -82,3 +82,99 @@
     .info-box h3 {
       margin-top: 0;
       color: white;
+    }
+
+    .info-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+      color: white;
+      font-size: 14px;
+    }
+
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+    }
+
+    .card {
+      background: white;
+      padding: 25px;
+      border-radius: 16px;
+      text-align: center;
+    }
+
+    .number {
+      font-size: 32px;
+      font-weight: bold;
+    }
+
+    .pink { color: #e91e63; }
+    .green { color: #00c853; }
+    .blue { color: #2196f3; }
+    .orange { color: #ff9800; }
+  </style>
+</head>
+
+<body>
+  <div class="wrapper">
+
+    <!-- SIDEBAR -->
+    <div class="sidebar">
+      <img src="avatar.jpg" class="avatar" alt="Avatar">
+      <h2>Nguyễn Quốc Linh</h2>
+      <p>nguyenlinh@gmail.com</p>
+
+      <div class="menu">
+        <div>👤 Hồ sơ</div>
+        <div>🕒 Hoạt động gần đây</div>
+        <div>⚙️ Chỉnh sửa</div>
+      </div>
+    </div>
+
+    <!-- MAIN -->
+    <div class="main">
+
+      <div class="status">
+        Hôm nay bạn đang nghĩ gì?
+      </div>
+
+      <div class="info-box">
+        <h3>Thông tin cá nhân</h3>
+        <div class="info-grid">
+          <div>👤 Họ tên: Nguyễn Quốc Linh</div>
+          <div>🎂 Sinh nhật: 01/01/2000</div>
+          <div>🌍 Quốc gia: Việt Nam</div>
+          <div>🎓 Nghề nghiệp: Học sinh</div>
+          <div>📞 Điện thoại: 0123 456 789</div>
+          <div>✉️ Email: nguyenlinh@gmail.com</div>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="card">
+          <div class="number pink">35</div>
+          <p>Website Envato</p>
+        </div>
+
+        <div class="card">
+          <div class="number green">63</div>
+          <p>ThemeForest CMS</p>
+        </div>
+
+        <div class="card">
+          <div class="number blue">75</div>
+          <p>Portfolio VectorLab</p>
+        </div>
+
+        <div class="card">
+          <div class="number orange">50</div>
+          <p>Adobe Muse</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</body>
+</html>
