--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
     <!-- SIDEBAR -->
     <div class="sidebar">
       <img src="avatar.jpg" class="avatar" alt="Avatar">
-      <h2>Nguyễn Quốc Linh</h2>
-      <p>nguyenlinh@gmail.com</p>
+      <h2>La Văn Hưng</h2>
+      <p>hungla.3005cs@gmail.com</p>
 
       <div class="menu">
         <div>👤 Hồ sơ</div>
@@ -143,12 +143,12 @@
       <div class="info-box">
         <h3>Thông tin cá nhân</h3>
         <div class="info-grid">
-          <div>👤 Họ tên: Nguyễn Quốc Linh</div>
+          <div>👤 Họ tên: La Văn Hưngh</div>
           <div>🎂 Sinh nhật: 01/01/2000</div>
           <div>🌍 Quốc gia: Việt Nam</div>
           <div>🎓 Nghề nghiệp: Học sinh</div>
           <div>📞 Điện thoại: 0123 456 789</div>
-          <div>✉️ Email: nguyenlinh@gmail.com</div>
+          <div>✉️ Email: hungla.3005cs@gmail.com</div>
         </div>
       </div>
 
@@ -178,3 +178,4 @@
   </div>
 </body>
 </html>
+
